Se puede editar la calificación desde la página de módulos del participante.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -48,7 +48,7 @@
             if (ViewBag.GruposInscritos != null)
             {
             <h1>Módulos Inscritos</h1>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between my-4">
                 <!-- Barra de búsqueda -->
                 <div class="w-75 me-2">
                     <form asp-action="BuscarGrupos" asp-controller="Grupo" method="get" class="input-group mb-3">
