--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <div style="background-color: #65bcdc; height: 95px;">
+    <div style="background-color: #0ccbf0; height: 95px;">
         <div class="logo-container">
             <div class="d-inline-flex justify-content-start align-items-center" style="position: absolute; z-index: 0;">
                 <div class="logo-link mx-3 py-2">
