Fix botón cambio vista

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -966,13 +966,13 @@ else
     };
 
     function toggleView() {
-        isListView = !isListView; 
-
+        isListView = !isListView;
         const gridView = document.getElementById("gridView");
         const gridView0 = document.getElementById("gridView0");
         const listView0 = document.getElementById("listView0");
         const listView = document.getElementById("listView");
-        const toggleViewBtn = document.getElementById("toggleViewBtn");
+        const toggleViewBtn1 = document.getElementById("toggleViewBtn");
+        const toggleViewBtn2 = document.getElementById("toggleViewBtn2");
 
         if (isListView) {
             if (gridView) gridView.classList.add("d-none");
