Bug botón cambio de vista

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -960,7 +960,7 @@ else
             if (gridView0) gridView0.classList.remove("d-none");
             if (listView0) listView0.classList.add("d-none");
             if (listView) listView.classList.add("d-none");  
-            if (toggleViewBtn) toggleViewBtn1.innerHTML = "<i class='bi bi-list-ul me-2'></i>Modo lista";
+            if (toggleViewBtn1) toggleViewBtn1.innerHTML = "<i class='bi bi-list-ul me-2'></i>Modo lista";
             if (toggleViewBtn2) toggleViewBtn2.innerHTML = "<i class='bi bi-list-ul me-2'></i>Modo lista";
         }
     };
